# Game

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: Game.yml
common/display/: colorchar.hpp  screen.hpp
include/common/debug/: command.hpp  debug.hpp
include/common/display/: color_char.h  color_char.hpp  pixel.h  pixel.hpp  screen.h  screen.hpp
include/common/game/basic/: role.h  role.hpp  role_list.h  role_screen.h  role_screen.hpp
include/common/io/: control.hpp
include/common/maths/: random.hpp
include/snake/: command.hpp  debug.hpp
include/snake/role/: apple.h  apple.hpp  role.h  snake.h  snake.hpp
src/: CMakeLists.txt  main.cpp
src/common/display/: color_char.cpp  pixel.cpp  screen.cpp
src/common/game/basic/: role.cpp  role_list.cpp  role_screen.cpp
src/snake/role/: apple.cpp  role.cpp  snake.cpp
